--- a/package.json
+++ b/package.json
@@ -6,15 +6,16 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.6.7",
+    "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
-    "react": "^18.2.0",
-    "react-bootstrap": "^2.10.1",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "sweetalert2": "^11.10.5",
+    "react": "^18.3.0",
+    "react-bootstrap": "^2.10.2",
+    "react-dom": "^18.3.0",
+    "react-icons": "^5.1.0",
+    "react-scripts": "^5.0.1",
+    "sweetalert2": "^11.6.13",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -42,6 +43,6 @@
     ]
   },
   "devDependencies": {
-    "react-router-dom": "^6.22.2"
+    "react-router-dom": "^6.23.0"
   }
 }
